# fastapi-todolist

./: Dockerfile  README.md  compose.yaml  database.py  main.py  pyproject.toml
